Fix screen edges on mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -157,6 +157,7 @@ div.normal {
 	float: left;
 	margin-top: 40px;
 	margin-left: 20px;
+	text-align: justify;
 }
 
 div.normal div.left {
@@ -552,8 +553,7 @@ div.text ul li {
 		width: 100%;
 		height: 100%;
 		font-size: 16px;
-		margin-top: 10px;
-		margin-left: 10px;
+		margin: 10px;
 	}
 	div.full div#fullpic img {
 		height: auto;
@@ -574,8 +574,7 @@ div.text ul li {
 		float: left;
 		position: relative;
 		font-size: 30px;
-		margin-top: 5px;
-		margin-left: 10px;
+		margin: 5px 3px 0 3px;
 		vertical-align: bottom;
 	}
 	div.header div.author {
@@ -602,8 +601,9 @@ div.text ul li {
 		color: #000000;
 	}
 	div.normal {
-		margin-top: 10px;
-		margin-left: 10px;
+		margin: 0 3px;
+		text-align: justify;
+		width: 96%;
 	}
 	div.normal div.left {
 		width: 100%;
